--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <!--Pink Design CSS Library end  -->
 
     <!-- Icons End -->
-    <link rel="stylesheet" href="https://unpkg.com/@appwrite.io/pink-icons" />
+    <link rel="stylesheet" href="https://unpkg.com22/@appwrite.io/pink-icons" />
     <!--Icons Start  -->
 
     <!-- Font family -->
@@ -58,7 +58,6 @@
 
       .first-section_box {
         width: 300px;
-        /* background-color: transparent; */
       }
 
       .first-section_box > .logo {
@@ -85,10 +84,6 @@
         color: #e4a087;
       }
 
-      /* .first-section_box,
-      .performance-section_revenue {
-        box-shadow: 3px 3px 4px rgb(214, 214, 214);
-      } */
     </style>
     <!-- CSS INLINE STYLES END-->
   </head>
